# unity-shell-plugins

./: .gitignore  .gitmodules  meson.build  meson_options.txt
gsettings/: README.md  gsettings-config-backend.cpp  gsettings-glib-source.cpp  gsettings-glib-source.hpp  gsettings-mapping.cpp  gsettings-mapping.hpp  gsettings-seed.cpp  gsettings-seed.hpp  gsettings-variant.cpp  gsettings-variant.hpp  meson.build
gsettings/tools/: gsettings-schema-gen.cpp
spatial/: README.md  config.hpp  controller.cpp  controller.hpp  coords.cpp  coords.hpp  drag.cpp  drag.hpp  gesture.cpp  gesture.hpp  meson.build  mode.cpp  mode.hpp  plugin.cpp  renderer.cpp  renderer.hpp  resources.hpp  slide.cpp  slide.hpp  spatial.xml  stage.hpp  tracker.hpp
subprojects/: wayfire.wrap  wf-config.wrap  wf-touch.wrap  wf-utils.wrap  wlroots.wrap
